Eerste swagger implementatie

--- a/MatchFlow.Api/appsettings.json
+++ b/MatchFlow.Api/appsettings.json
@@ -1,13 +1,12 @@
 {
+  "ConnectionStrings": {
+    "Default": "Server=(localdb)\\mssqllocaldb;Database=MatchFlow;Trusted_Connection=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
     }
-  },
-  "AllowedHosts": "*",
- 
-  "ConnectionStrings": {
-      "Default": "Server=localhost;Database=MatchFlow;Trusted_Connection=True;TrustServerCertificate=True"
   }
 }
