Nieuwe Migration (1e versie van hoe het er uitmoet zien).
1e Controller voor Team: GetAll(), GetById() & Create() zijn al toegevoegd. ik zal later verder gaan met de rest van de CRUD functionaliteiten.

--- a/MatchFlow.Api/MatchFlow.Api.csproj
+++ b/MatchFlow.Api/MatchFlow.Api.csproj
@@ -8,6 +8,7 @@
 
   <PropertyGroup>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
+	  <NoWarn>$(NoWarn);1591</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
@@ -26,10 +27,6 @@
   <ItemGroup>
     <ProjectReference Include="..\MatchFlow.Application\MatchFlow.Application.csproj" />
     <ProjectReference Include="..\MatchFlow.Infrastructure\MatchFlow.Infrastructure.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Controllers\" />
   </ItemGroup>
 
 </Project>
