Error fix: - JWT system werkte nog niet, JWT tokens werden niet gegenereerd - Int gebruikt in FixtureSide & MediaType

--- a/MatchFlow.Api/appsettings.Development.json
+++ b/MatchFlow.Api/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Jwt": {
+    "Key": "REPLACE_WITH_A_STRONG_RANDOM_SECRET_AT_LEAST_32_CHARS",
+    "Issuer": "MatchFlow.Api"
   }
 }
