--- a/MatchFlow.Api/appsettings.json
+++ b/MatchFlow.Api/appsettings.json
@@ -2,6 +2,11 @@
   "ConnectionStrings": {
     "Default": "Server=(localdb)\\mssqllocaldb;Database=MatchFlow;Trusted_Connection=True;"
   },
+  "Jwt": {
+    "Issuer": "MatchFlow",
+    "Audience": "MatchFlowClient",
+    "Key": "REPLACE_WITH_A_LONG_RANDOM_SECRET_KEY"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
